# StudyFlow

./: .env.example  .gitignore  LICENSE  PHASE_6_ENHANCED_AI_HELP.md  README.md  pyproject.toml
app/: __init__.py  config.py  lifespan.py  main.py
app/application/services/: day_planning_service.py  prompt_builder.py  task_priority_service.py
app/application/use_cases/: generate_task_help.py  get_task_detail.py  list_tasks.py  manage_task_state.py  plan_day.py  save_settings.py  sync_tasks.py  validate_provider.py
app/domain/: enums.py  exceptions.py
app/domain/models/: checklist.py  day_plan.py  task.py  task_state.py  task_step.py
app/domain/ports/: llm_client.py  moodle_client.py  state_repository.py  task_repository.py
app/infrastructure/: factories.py
app/infrastructure/cache/: in_memory_task_store.py
app/infrastructure/config/: settings.py
app/infrastructure/llm/: anthropic_client.py  groq_client.py  ollama_client.py  openai_client.py  schemas.py
app/infrastructure/logging/: setup.py
app/infrastructure/moodle/: mapper.py  parser.py  playwright_client.py  selectors.py
app/infrastructure/persistence/: __init__.py  persistent_state_store.py
app/presentation/forms/: ai_help_form.py  settings_form.py
app/presentation/routes/: __init__.py  ai_help.py  health.py  pages.py  planning.py  settings.py  task_state.py  tasks.py
app/presentation/static/js/: enhanced_help.js
app/presentation/templates/: base.html  dashboard.html  settings.html  task_detail.html
app/presentation/templates/partials/: ai_panel.html  alerts.html  day_plan.html  task_card.html  task_list.html
app/presentation/viewmodels/: settings.py  tasks.py
app/presentation/web/: app.py
app/static/css/: app.css
app/static/js/: day_plan.js  enhanced_help.js
data/: task_states.json
scripts/: run.py
tests/integration/: test_ai_help_routes.py  test_planning_routes.py  test_routes.py  test_task_state_routes.py
tests/unit/: test_ai_help_form.py  test_config.py  test_day_planning_service.py  test_factories.py  test_forms.py  test_generate_task_help_use_case.py  test_get_task_detail_use_case.py  test_in_memory_task_store.py  test_list_tasks_use_case.py  test_main.py  test_manage_task_state_use_cases.py  test_persistent_state_store.py  test_plan_day_use_case.py  test_prompt_builder.py  test_save_settings_use_case.py  test_sync_tasks_use_case.py  test_task_model.py  test_task_priority_service.py  test_task_state_model.py  test_task_step_model.py  test_validate_provider_use_case.py
