[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moodle-ai-assistant"
version = "0.1.0"
description = "Local-first Moodle assistant with task prioritization and on-demand AI help."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Cesar Manzo" }
]
keywords = [
  "moodle",
  "fastapi",
  "playwright",
  "htmx",
  "ai",
  "automation",
  "student",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "jinja2>=3.1.4,<4.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "playwright>=1.46.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "tenacity>=8.5.0,<10.0.0",
  "beautifulsoup4>=4.12.3,<5.0.0",
  "python-dateutil>=2.9.0.post0,<3.0.0",
  "structlog>=24.4.0,<25.0.0",
  "orjson>=3.10.6,<4.0.0",
]

[project.optional-dependencies]
openai = [
  "openai>=1.40.0,<2.0.0",
]
anthropic = [
  "anthropic>=0.34.0,<1.0.0",
]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.23.8,<1.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "pytest-httpx>=0.30.0,<1.0.0",
  "respx>=0.21.1,<1.0.0",
  "coverage[toml]>=7.6.0,<8.0.0",
  "ruff>=0.6.1,<1.0.0",
  "mypy>=1.11.1,<2.0.0",
  "types-python-dateutil>=2.9.0.20240316",
  "pre-commit>=3.8.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/CesarManzoCode/moodle-ai-assistant"
Repository = "https://github.com/CesarManzoCode/moodle-ai-assistant"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "ASYNC",
  "C4",
  "DTZ",
  "G",
  "PIE",
  "Q",
  "RET",
  "RSE",
  "SIM",
  "TCH",
  "TID",
  "ARG",
  "PTH",
]
ignore = [
  "B008",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config --cov=app --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: marks integration tests",
  "e2e: marks end-to-end tests",
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
skip_covered = false
show_missing = true
fail_under = 85

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
pretty = true
show_error_codes = true
plugins = []

[[tool.mypy.overrides]]
module = [
  "bs4",
]
ignore_missing_imports = true